<resources>
    <string name="app_name">VR Code</string>

    <string name="install_termux_tip">You should first install Termux</string>
    <string name="install_termux_reason">VR Code relies on the package eco-system provided by Termux. You should install an empty package.\nThe source code of fake termux can be found at VRCodeProject@GitHub.\n</string>
    <string name="install_termux_btn">Install Fake Termux</string>
    <string name="install_official_termux">You should install fake version Termux.</string>
    <!--    <string name="download_failed">Failed to download Termux.</string>-->
    <!--    <string name="downloading_termux">Downloading Termux</string>-->
    <string name="have_installed_termux">Have installed</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!--    XWayland install strings    -->
    <string name="install_x_wayland_title">You should install XWayland</string>
    <string name="install_x_wayland_reason">VR Code relies on XWayland to provide graphical support.\nIt should be installed in Termux.</string>
    <string name="install_x_wayland_btn">Install XWayland</string>
    <string name="install_x_wayland_dialog_button">Done</string>
    <string name="install_x_wayland_dialog_toast">Session is running, cannot cancel.</string>

    <!--    init dialog strings    -->
    <!--    <string name="de_chooser_dialog_title">Choose Desktop Environment</string>-->
    <!--    <string name="tools_chooser_dialog_title">Choose Tools</string>-->
    <!--    <string name="run_install_chosen">"Install Chosen Software"</string>-->
    <string name="install_username_dialog_title">Input username for Linux</string>
    <string name="install_linux_dialog_title">Setup Linux Environment</string>

    <string name="desktop_notification_name">Desktop Service</string>
    <string name="desktop_notification_content">Desktop Service is running</string>

    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">VR Code was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">VR Code can only be run as the primary user.
        \nBootstrap binaries compiled for VR Code have hardcoded $PREFIX path and cannot be installed
        under any path other than %1$s.</string>
</resources>
