<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".errView.TermuxNotEnableActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/termux_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/termux_logo"
             />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/install_termux_title"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/install_termux_tip"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/install_termux_reason"
            android:maxWidth="500dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/install_termux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="@string/install_termux_btn"/>

        <Button
            android:id="@+id/termux_install2main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="@string/have_installed_termux"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>